--- a/config.json
+++ b/config.json
@@ -2,12 +2,12 @@
   "resCode": "00000",
   "resMsg":"",
   "data":{
-    "baseUrl":"http://101.132.44.11:8080"
-    "download":"https://pgyer.com/abird"
-    "jianScore":"4"
-    "ranAd":"1"
-    "score":"1、新用户注册即送200积分；\n2、每邀请一位好友注册(注册时需填写您的邀请码)，您和被邀请人各获得200积分；\n3、每天登录签到可获得+5积分；\n4、每观看一部影视-88积分；\n5、可进入[赚取积分]完成积分任务获取对应积分奖励\n6、活动期间不扣除任何积分"
-    "conn":"1. 微信：bohe_bird\n2. QQ：3035447387欢迎各界小伙伴们来撩！\n有什么问题都可以咨询，也可以给我们打赏，我们都会很乐意的接受的！\n\n*(*^__^*)* "
+    "baseUrl":"http://101.132.44.11:8080",
+    "download":"https://pgyer.com/abird",
+    "jianScore":"4",
+    "ranAd":"1",
+    "score":"1、新用户注册即送200积分；\n2、每邀请一位好友注册(注册时需填写您的邀请码)，您和被邀请人各获得200积分；\n3、每天登录签到可获得+5积分；\n4、每观看一部影视-88积分；\n5、可进入[赚取积分]完成积分任务获取对应积分奖励\n6、活动期间不扣除任何积分",
+    "conn":"1. 微信：bohe_bird\n2. QQ：3035447387欢迎各界小伙伴们来撩！\n有什么问题都可以咨询，也可以给我们打赏，我们都会很乐意的接受的！\n\n*(*^__^*)* ",
     "service":"一、本应用内收录的各类视频与资料，均通过大数据智能系统从互联网上搜集并分类而来，其版权均归原作者及其网站所有。如果您对本应用所有视频作品版权的归属存有异议，请立即通知我，我将在第一时间予以删除，同时向您表示歉意\n\n二、本应用提供的所有视频，均为原链接的方式进行加载和转载，并均注明了视频来源，未经原版权作者许可，任何人不得擅作它用！请下载后24小时内删除！尊重版权！\n\n三、本应用致力于为用户提供最好的视频资源服务，同时若您在本应用内发现了违规违法或引起您不适的内容，请与我们联系或反馈，我们将立即做出整顿！"
   }
 }
