--- a/adConfig.json
+++ b/adConfig.json
@@ -2,10 +2,7 @@
   "resCode": "00000",
   "resMsg":"",
   "data":{
-    "showAd":1,
     "force":0,
-    "showSpotAd":1,
-    "content":"",
-    "model":0
+    "content":""
   }
 }
