--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
     "baseUrl":"http://101.132.44.11:8080",
     "download":"https://pgyer.com/abird",
     "jianScore":"4",
+    "shareTime":"259200000",
     "ranAd":"1",
     "score":"1、新用户注册即送200积分；\n2、每邀请一位好友注册(注册时需填写您的邀请码)，您和被邀请人各获得200积分；\n3、每天登录签到可获得+5积分；\n4、每观看一部影视-4积分；\n5、可进入[赚取积分]完成积分任务获取对应积分奖励\n6、活动期间不扣除任何积分",
     "conn":"1. 微信：bohe_bird\n2. QQ：3035447387欢迎各界小伙伴们来撩！\n有什么问题都可以咨询，也可以给我们打赏，我们都会很乐意的接受的！\n\n*(*^__^*)* ",
