--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "resMsg":"",
   "data":{
     "baseUrl":"http://101.132.44.11:8080",
-    "download":"https://pgyer.com/abird",
+    "download":"https://www.pgyer.com/abird",
     "jianScore":"4",
     "shareTime":"259200000",
     "ranAd":"1",
