--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     "earnScore2":"马上推荐给亲朋好友，为播盒鼓劲加油！",
     "playerHeight":"220",
     "force":0,
-    "content":"ssss",
+    "content":"",
     "model":0,
     "dialogVersion":0
   }
