--- a/config.json
+++ b/config.json
@@ -15,8 +15,11 @@
     "earnScore2":"马上推荐给亲朋好友，为播盒鼓劲加油！",
     "playerHeight":"220",
     "force":0,
-    "content":"",
+    "content":"111",
     "model":0,
-    "dialogVersion":0
+    "dialogVersion": 0,
+    "dialogTitle": "告示",
+    "dialogButton": "知道了",
+    "dialogUrl": "https://www.pgyer.com/abird"
   }
 }
