--- a/config.json
+++ b/config.json
@@ -22,6 +22,6 @@
     "dialogButton": "知道了",
     "dialogUrl": "",
     "activeTitle":"小说",
-    "activeUrl":""
+    "activeUrl":"c1244.ksjy-cnc.com"
   }
 }
