--- a/config.json
+++ b/config.json
@@ -22,6 +22,7 @@
     "dialogButton": "知道了",
     "dialogUrl": "",
     "activeTitle":"小说",
-    "activeUrl":"http://c1244.ksjy-cnc.com/"
+    "activeUrl":"http://c1244.ksjy-cnc.com/",
+    "qq":1
   }
 }
