--- a/config.json
+++ b/config.json
@@ -23,6 +23,7 @@
     "dialogUrl": "",
     "activeTitle":"小说",
     "activeUrl":"http://c1244.ksjy-cnc.com/",
-    "qq":1
+    "qq":1,
+    "channel":"baidu"
   }
 }
