--- a/config.json
+++ b/config.json
@@ -24,6 +24,6 @@
     "activeTitle":"小说",
     "activeUrl":"http://c1244.ksjy-cnc.com/",
     "qq":1,
-    "channel":"qq"
+    "channel":"baidu"
   }
 }
