--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
     "dialogButton": "知道了",
     "dialogUrl": "",
     "activeTitle":"小说",
-    "activeUrl":"http://c1244.ksjy-cnc.com/",
+    "activeUrl":"",
     "qq":1,
     "channel":"qq"
   }
