--- a/config.json
+++ b/config.json
@@ -21,8 +21,8 @@
     "dialogTitle": "告示",
     "dialogButton": "知道了",
     "dialogUrl": "",
-    "activeTitle":"小说",
-    "activeUrl":"",
+    "activeTitle":"兴趣",
+    "activeUrl":"https://sdcr.ykwlkj.com/h5/xyjk/#/loan-list?partnerCode=jijie",
     "qq":1,
     "channel":"qq"
   }
