--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
     "dialogButton": "知道了",
     "dialogUrl": "",
     "activeTitle":"兴趣",
-    "activeUrl":"",
+    "activeUrl":"https://sdcr.ykwlkj.com/h5/xyjk/#/loan-list?partnerCode=jijie",
     "qq":1,
     "channel":"qq"
   }
