--- a/config.json
+++ b/config.json
@@ -23,8 +23,8 @@
     "dialogTitle": "告示",
     "dialogButton": "知道了",
     "dialogUrl": "",
-    "activeTitle":"兴趣",
-    "activeUrl":"",
+    "activeTitle":"小说",
+    "activeUrl":"http://m.xiaoxiaoshuoba.com/Index/index/cid/3335.html",
     "qq":1,
     "channel":"qq"
   }
