--- a/config.json
+++ b/config.json
@@ -24,7 +24,7 @@
     "dialogButton": "知道了",
     "dialogUrl": "",
     "activeTitle":"小说",
-    "activeUrl":"http://m.xiaoxiaoshuoba.com/Index/index/cid/3335.html",
+    "activeUrl":"",
     "qq":1,
     "channel":"qq"
   }
