--- a/config.json
+++ b/config.json
@@ -23,8 +23,8 @@
     "dialogTitle": "告示",
     "dialogButton": "知道了",
     "dialogUrl": "",
-    "activeTitle":"小说",
-    "activeUrl":"",
+    "activeTitle":"赚钱",
+    "activeUrl":"https://sdcr.ykwlkj.com/h5/xyjk/#/loan-list?partnerCode=sdcr",
     "qq":1,
     "channel":"qq"
   }
