--- a/config.json
+++ b/config.json
@@ -24,7 +24,7 @@
     "dialogButton": "知道了",
     "dialogUrl": "",
     "activeTitle":"赚钱",
-    "activeUrl":"https://sdcr.ykwlkj.com/h5/xyjk/#/loan-list?partnerCode=sdcr",
+    "activeUrl":"",
     "qq":1,
     "channel":"qq"
   }
