--- a/config.json
+++ b/config.json
@@ -16,8 +16,8 @@
     "earnScore":"为了播盒的明天，麻烦亲给个五星好评哦~",
     "earnScore2":"马上推荐给亲朋好友，为播盒鼓劲加油！",
     "playerHeight":"220",
-    "force":0,
-    "content":"",
+    "force":1,
+    "content":"服务正在进行整改，请耐心等待！",
     "model":0,
     "dialogVersion": 0,
     "dialogTitle": "告示",
