--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     "earnScore2":"马上推荐给亲朋好友，为播盒鼓劲加油！",
     "playerHeight":"220",
     "force":1,
-    "content":"服务正在进行整改，请耐心等待！",
+    "content":"App正在进行全面升级整改，敬请期待！",
     "model":0,
     "dialogVersion": 0,
     "dialogTitle": "告示",
