--- a/config.json
+++ b/config.json
@@ -16,11 +16,11 @@
     "earnScore":"为了播盒的明天，麻烦亲给个五星好评哦~",
     "earnScore2":"马上推荐给亲朋好友，为播盒鼓劲加油！",
     "playerHeight":"220",
-    "force":0,
-    "content":"App正在进行全面升级整改，敬请期待！",
+    "force":1,
+    "content":"Error.",
     "model":0,
     "dialogVersion": 0,
-    "dialogTitle": "",
+    "dialogTitle": "Tips",
     "dialogButton": "",
     "dialogUrl": "",
     "activeTitle":"赚钱",
