--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "data":{
     version: 1,
     force: false,
-    emailDomain: [
+    emailDomains: [
       "nqmo.com",
       "qabq.com",
       "end.tw",
