--- a/config.json
+++ b/config.json
@@ -2,12 +2,12 @@
   "code": 0,
   "msg":"",
   "data":{
-    version: 1,
-    content: "",
-    versionName: "",
-    force: false,
-    des: "",
-    emailDomains: [
+    "version": 1,
+    "content": "",
+    "versionName": "",
+    "force": false,
+    "des": "",
+    "emailDomains": [
       "nqmo.com",
       "qabq.com",
       "end.tw",
