--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "content": "Please Update the new version",
     "versionName": "1.2",
     "force": false,
-    "des": "hello",
+    "des": "",
     "emailDomains": [
       "nqmo.com",
       "qabq.com",
