--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
   "code": 0,
   "msg":"",
   "data":{
-    "version": 1,
+    "version": 2,
     "content": "Please Update the new version",
     "versionName": "1.2",
-    "force": false,
+    "force": true,
     "des": "",
     "emailDomains": [
       "nqmo.com",
