--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "version": 2,
     "content": "Please Update the new version",
     "versionName": "1.2",
-    "force": true,
+    "force": false,
     "des": "",
     "emailDomains": [
       "nqmo.com",
