--- a/config.json
+++ b/config.json
@@ -13,6 +13,17 @@
       "end.tw",
       "uuf.me",
       "6n9.net"
+    ],    
+    "emailDomainsPlus": [
+      "mailto.plus",
+      "fexpost.com",
+      "fexbox.org",
+      "mailbox.in.ua",
+      "rover.info",
+      "chitthi.in",
+      "fextemp.com",
+      "any.pink",
+      "merepost.com"
     ],
     "disableMain": false
   }
