--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "msg":"",
   "data":{
     "version": 11,
-    "content": "Fixed some bugs and add more free domains, please update to the latest version",
+    "content": "Fixed some bugs, please update to the latest version",
     "versionName": "1.8",
     "force": false,
     "des": "",
