--- a/config.json
+++ b/config.json
@@ -26,6 +26,7 @@
       "merepost.com"
     ],
     "showFilesVersion": 1,
+    "filesUrl": "https://temp.sh/upload",
     "disableMain": false
   }
 }
