--- a/config.json
+++ b/config.json
@@ -20,6 +20,7 @@
       "fexbox.org",
       "mailbox.in.ua",
       "rover.info",
+      "chitthi.in",
       "fextemp.com",
       "any.pink",
       "merepost.com"
