Add adTime setting to config.json

--- a/config.json
+++ b/config.json
@@ -28,6 +28,7 @@
     "showFilesVersion": 1,
     "showEmailDomainsVersion": 1,
     "showEmailDomainsPlusVersion": 1,
-    "disableMain": false
+    "disableMain": false,
+    "adTime": 1
   }
 }
