--- a/config.json
+++ b/config.json
@@ -8,7 +8,11 @@
     "force": false,
     "des": "",
     "emailDomains": [
-
+      "nqmo.com",
+      "qabq.com",
+      "end.tw",
+      "uuf.me",
+      "6n9.net"
     ],    
     "emailDomainsPlus": [
       
