--- a/config.json
+++ b/config.json
@@ -15,7 +15,18 @@
       "6n9.net"
     ],    
     "emailDomainsPlus": [
-      
+      "bltiwd.com",
+      "daouse.com",
+      "illubd.com",
+      "mkzaso.com",
+      "mrotzis.com",
+      "xkxkud.com",
+      "wnbaldwy.com",
+      "bwmyga.com",
+      "ozsaip.com",
+      "yzcalo.com",
+      "lnovic.com", 
+      "ruutukf.com"
     ],
     "skus": [
       {
@@ -39,7 +50,7 @@
     ],
     "showFilesVersion": 1,
     "showEmailDomainsVersion": 1,
-    "showEmailDomainsPlusVersion": 1,
+    "showEmailDomainsPlusVersion": 34,
     "disableMain": false,
     "adTime": 1
   }
